--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-
-<iframe src="http://silkroadx.us.to" width="100%" height="100%" scrolling="yes" frameborder="0" />
+<html> <body>     <iframe src="http://silkroadx.us.to" width="100%" height="100%" scrolling="yes" frameborder="0" /> </body> </html>
